# SM-projekt

./: .gitignore  CMakeLists.txt  README.md  SM2021-Projekt1.cbp  SM2021-Projekt1.cpp  SM2021-Projekt1.depend  SM2021-Projekt1.layout
